--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "soln-assign",
+  "name": "search-restaurants",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "./node_modules/webpack/bin/webpack.js -p",
+    "start":
+      "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --colors"
   },
   "bin": {
     "merge": "./dataManipulation.js",
@@ -15,6 +18,23 @@
   "license": "ISC",
   "dependencies": {
     "algoliasearch": "^3.24.5",
-    "csvtojson": "^1.1.9"
+    "algoliasearch-helper": "^2.23.0",
+    "csvtojson": "^1.1.9",
+    "react-algoliasearch-helper": "^1.2.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "node-sass": "^4.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4"
   }
 }
