--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "csvtojson": "^1.1.9",
     "material-ui": "^1.0.0-beta.20",
     "material-ui-icons": "^1.0.0-beta.17",
+    "material-ui-search-bar": "^0.4.1",
     "react-algoliasearch-helper": "^1.2.1",
     "react-collapse": "^4.0.3",
     "react-motion": "^0.5.2"
@@ -31,12 +32,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "node-sass": "^4.6.0",
+    "file-loader": "^1.1.5",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   }
