huge commit, design finished but filters still not working

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "./node_modules/webpack/bin/webpack.js -p",
-    "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --colors"
+    "start":
+      "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --colors"
   },
   "bin": {
     "merge": "./dataManipulation.js",
@@ -19,10 +20,9 @@
     "algoliasearch": "^3.24.5",
     "algoliasearch-helper": "^2.23.0",
     "csvtojson": "^1.1.9",
+    "immutability-helper": "^2.5.0",
     "material-ui": "^1.0.0-beta.20",
     "material-ui-icons": "^1.0.0-beta.17",
-    "material-ui-search-bar": "^0.4.1",
-    "react-algoliasearch-helper": "^1.2.1",
     "react-collapse": "^4.0.3",
     "react-motion": "^0.5.2"
   },
@@ -36,6 +36,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "style-loader": "^0.19.0",
+    "toolbox-loader": "0.0.3",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
